[package]
name = "brs-winthumb"
version = "0.1.0"
authors = ["voximity <voximity@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brickadia = { version = "0.1.16", default_features = false }
intercom = { git = "https://github.com/Rantanen/intercom", rev = "41518eef1dd6984c130d6daf2218b9fb6e47c3bb" }
log = "0.4.14"
image = "0.23.14"
simple-logging = "2.0.2"
winreg = "0.9.0"
windows = "0.19.0"

[build-dependencies]
windows = "0.19.0"
